--- a/app/src/main/res/layout/dialog_search.xml
+++ b/app/src/main/res/layout/dialog_search.xml
@@ -23,7 +23,7 @@
             android:text="@string/search_news"
             android:fontFamily="sans-serif"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"/>
 
@@ -32,10 +32,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="5dp"
-            android:layout_marginHorizontal="5dp"
+            android:layout_marginHorizontal="10dp"
             android:text="@string/search_the_news_by"
             android:fontFamily="sans-serif"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"/>
 
@@ -44,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="2"
-            android:layout_marginHorizontal="5dp"
+            android:layout_marginHorizontal="10dp"
             android:orientation="horizontal">
 
             <RadioButton
@@ -54,7 +54,7 @@
                 android:layout_weight="1"
                 android:text="@string/title"
                 android:fontFamily="sans-serif"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="14sp"
                 android:textStyle="bold"/>
 
@@ -65,7 +65,7 @@
                 android:layout_weight="1"
                 android:text="@string/description"
                 android:fontFamily="sans-serif"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="14sp"
                 android:textStyle="bold"/>
 
@@ -76,10 +76,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="5dp"
-            android:layout_marginHorizontal="5dp"
+            android:layout_marginHorizontal="10dp"
             android:text="@string/input_search_query"
             android:fontFamily="sans-serif"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"/>
 
@@ -87,7 +87,7 @@
             android:id="@+id/textInputQuery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="5dp"
+            android:layout_marginHorizontal="10dp"
             app:hintEnabled="false">
 
             <EditText
@@ -95,13 +95,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_dialog"
-                android:drawableStart="@drawable/ic_search_black"
+                android:drawableStart="@drawable/ic_search"
                 android:drawablePadding="10dp"
                 android:hint="@string/input_query"
                 android:inputType="text"
                 android:fontFamily="sans-serif"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
                 android:textSize="14sp"
                 android:autofillHints="false"/>
 
@@ -111,9 +111,10 @@
             android:id="@+id/btnSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="5dp"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="5dp"
-            android:background="@color/white"
+            android:background="@drawable/bg_dialog"
+            android:backgroundTint="@color/white"
             android:text="@string/search_news"
             android:textColor="@color/black"/>
 
